feat: implement OAuth2 social login, refactor TaskHub naming to Artezan, and fix admin login endpoint issues